# python-amazon-paapi

./: .coveragerc  .env.template  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yml  .shellcheckrc  CHANGELOG.md  Dockerfile  LICENSE  Makefile  PRODUCT.md  README.md  example.py  pyproject.toml  requirements.txt  setup.py  sonar-project.properties
.agent/rules/: code-style-guide.md
.githooks/: .pre-push  pre-commit  pre-push
.github/ISSUE_TEMPLATE/: ---bug-report.md  ---feature-request.md  config.yml
.github/workflows/: check.yml  codecov-upload.yml  lint-and-test.yml  publish.yml  python-publish.yml  release.yml
amazon/: README.md  __init__.py  constant.py  paapi.py  parse.py  parser.py  tools.py
amazon/paapi5_python_sdk/: __init__.py  api_client.py  availability.py  browse_node.py  browse_node_ancestor.py  browse_node_child.py  browse_node_children.py  browse_node_info.py  browse_nodes_result.py  by_line_info.py  classifications.py  configuration.py  content_info.py  content_rating.py  dimension_based_attribute.py  duration_price.py  external_ids.py  get_browse_nodes_request.py  get_browse_nodes_response.py  get_items_request.py  get_items_resource.py  get_items_response.py  get_variations_request.py  get_variations_response.py  image_size.py  image_type.py  images.py  item.py  item_id_type.py  item_info.py  items_result.py  languages.py  manufacture_info.py  min_price.py  offer_condition.py  offer_delivery_info.py  offer_listing.py  offer_loyalty_points.py  offer_merchant_info.py  offer_price.py  (+24 more)
amazon/paapi5_python_sdk/api/: __init__.py  default_api.py
amazon/serializer/: dango_rest_framework.py
amazon_creatorsapi/: __init__.py  api.py  async_api.py  errors.py  models.py  tools.py
amazon_creatorsapi/aio/: __init__.py  api.py  auth.py  client.py
amazon_creatorsapi/core/: __init__.py  constants.py  error_handling.py  marketplaces.py  parsers.py  resources.py  validation.py
amazon_creatorsapi/errors/: __init__.py  exceptions.py
amazon_creatorsapi/helpers/: __init__.py
amazon_paapi/: __init__.py  api.py  constant.py  constants.py  exception.py  exceptions.py  paapi.py  tools.py
amazon_paapi/errors/: __init__.py  exceptions.py
amazon_paapi/helpers/: __init__.py  arguments.py  generators.py  items.py  requests.py  types.py
amazon_paapi/models/: __init__.py  api_item.py  browse_nodes_result.py  custom_models.py  item_result.py  regions.py  search_result.py  variations_result.py
amazon_paapi/sdk/: NOTICE.txt  __init__.py  api_client.py  configuration.py  rest.py
amazon_paapi/tools/: __init__.py  asin.py
creatorsapi_python_sdk/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
creatorsapi_python_sdk/api/: __init__.py  default_api.py
creatorsapi_python_sdk/auth/: __init__.py  oauth2_config.py  oauth2_token_manager.py
creatorsapi_python_sdk/models/: __init__.py  access_denied_exception_response_content.py  access_denied_reason.py  availability.py  browse_node.py  browse_node_ancestor.py  browse_node_child.py  browse_node_info.py  browse_nodes_result.py  by_line_info.py  classifications.py  condition.py  content_info.py  content_rating.py  contributor.py  customer_reviews.py  deal_details.py  delivery_flag.py  dimension_based_attribute.py  error_data.py  external_ids.py  feed.py  get_browse_nodes_request_content.py  get_browse_nodes_resource.py  get_browse_nodes_response_content.py  get_feed_request_content.py  get_feed_response_content.py  get_items_request_content.py  get_items_resource.py  get_items_response_content.py  get_report_request_content.py  get_report_response_content.py  get_variations_request_content.py  get_variations_resource.py  get_variations_response_content.py  image_size.py  image_type.py  images.py  internal_server_exception_response_content.py  item.py  (+51 more)
docs/: amazon_creatorsapi.aio.rst  amazon_creatorsapi.core.rst  amazon_creatorsapi.errors.rst  amazon_creatorsapi.models.rst  amazon_creatorsapi.rst  amazon_paapi.errors.rst  amazon_paapi.helpers.rst  amazon_paapi.models.rst  amazon_paapi.rst  amazon_paapi.sdk.api.rst  amazon_paapi.sdk.auth.rst  amazon_paapi.sdk.models.rst  amazon_paapi.sdk.rst  amazon_paapi.tools.rst  conf.py  index.rst  modules.rst  requirements.txt
docs/_static/: dark.css
docs/pages/: migration-guide-4.md  migration-guide-5.md  migration-guide-6.md  migration-guide.md  usage-guide.md
examples/: example.py
paapi5_python_sdk/: __init__.py  api_client.py  browse_node.py  browse_node_children.py  browse_node_info.py  browse_nodes_result.py  by_line_info.py  classifications.py  condition.py  configuration.py  content_info.py  content_rating.py  contributor.py  delivery_flag.py  dimension_based_attribute.py  duration_price.py  error_data.py  get_browse_nodes_request.py  get_browse_nodes_resource.py  get_browse_nodes_response.py  get_items_request.py  get_items_response.py  get_variations_request.py  get_variations_resource.py  get_variations_response.py  image_type.py  images.py  item.py  item_info.py  items_result.py  language_type.py  languages.py  manufacture_info.py  max_price.py  merchant.py  min_reviews_rating.py  min_saving_percent.py  multi_valued_attribute.py  offer_availability.py  offer_condition.py  (+30 more)
paapi5_python_sdk/api/: __init__.py  default_api.py
paapi5_python_sdk/auth/: __init__.py  sig_v4.py
scripts/: check_black  check_flake8  check_isort  check_pylint  check_version.py  helpers  run_tests
tests/: __init__.py  api_test.py  errors_test.py  helpers_generators_test.py  helpers_items_test.py  helpers_requests_test.py  integration_test.py  offersv2_test.py  test_api.py  test_api_get_browse_nodes.py  test_api_get_items.py  test_api_get_variations.py  test_api_search_items.py  test_errors.py  test_helpers_arguments.py  test_helpers_generators.py  test_helpers_items.py  test_helpers_requests.py  test_tools.py  tools_test.py
tests/amazon_creatorsapi/: __init__.py  api_test.py  async_api_test.py  async_auth_test.py  async_client_test.py  async_integration_test.py  integration_test.py  tools_test.py
tests/data/: dump.json
(+117 files in other folders)
